--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@heroicons/react": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-fast-marquee": "^1.3.1"
+    "react-fast-marquee": "^1.3.1",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
