--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "techsonance22",
+  "name": "Techsonance2022",
+  "homepage": "http://techsonance.co.in/",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
