--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@splinetool/react-spline": "^2.0.0",
+    "@splinetool/runtime": "^0.9.34",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.1",
-    "react-router-dom": "^6.3.0"
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
+    "@types/node": "^17.0.25",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
-    "vite": "^2.9.0"
+    "vite": "^2.9.0",
+    "vite-plugin-pages": "^0.23.0"
   }
 }
