--- a/package.json
+++ b/package.json
@@ -1,32 +1,46 @@
 {
-  "name": "Techsonance2022",
-  "homepage": "http://techsonance.co.in/",
-  "private": true,
+  "name": "techsonance22",
   "version": "0.1.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
-    "@splinetool/react-spline": "^2.0.0",
-    "@splinetool/runtime": "^0.9.34",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-fast-marquee": "^1.3.1",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "tw-elements": "^1.0.0-alpha12"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/node": "^17.0.25",
-    "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "vite": "^2.9.0",
-    "vite-plugin-pages": "^0.23.0"
+    "react-router-dom": "^5.3.0",
+    "tailwindcss": "^3.0.24"
   }
 }
