--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "techsonance22",
+  "homepage": "http://techsonance.co.in/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
